# SDL_tests

./: CMakeLists.txt  README.md
cmakemodule/: FLSHelpers.cmake  FindFFMPEG.cmake  FindMp3Lame.cmake  FindOGGTHEORA.cmake  FindSDL1.cmake  FindSDL2TTF.cmake  FindSDL2_image.cmake  FindThreadsTemp.cmake  Toolchain_bpi_arm.cmake  Toolchain_bpi_armhf.cmake
colortest/: CMakeLists.txt  bilinear.c  bilinear.h  color.c  color.h  colortest  testpalette.c
testSDL/: CMakeLists.txt  testoverlay.c
testSDL_opengl/: CMakeLists.txt  testgl.c
